src/test/ui/error-codes/E0428.rs
struct Bar; //~ previous definition of the type `Bar` here
struct Bar; //~ ERROR E0428

fn main () {
}
